
  - Better documentation of the different ways to export variables to a
    subsidiary SConscript file.

  - Support fetching arbitrary files from the TARGETS or SOURCES lists
    (e.g. ${SOURCES[2]}) when calculating the build signature of a
    command.

  - Don't silently swallow exceptions thrown by Scanners (or other
    exceptions while finding a node's dependent children).

  From Lachlan O'Dea:

  - Add SharedObject() support to the masm tool.



RELEASE 0.11 - Tue, 11 Feb 2003 05:24:33 -0600

  From Chad Austin:

  - Add support for IRIX and the SGI MIPSPro tool chain.

  - Support using the MSVC tool chain when running Cygwin Python.

  From Michael Cook:

  - Avoid losing signal bits in the exit status from a command,
    helping terminate builds on interrupt (CTRL+C).

  From Charles Crain:

  - Added new AddPreAction() and AddPostAction() functions that support
    taking additional actions before or after building specific targets.

  - Add support for the PharLap ETS tool chain.

  From Steven Knight:

  - Allow Python function Actions to specify a list of construction
    variables that should be included in the Action's signature.

  - Allow libraries in the LIBS variable to explicitly include the prefix
    and suffix, even when using the GNU linker.
    (Bug reported by Neal Becker.)

  - Use DOS-standard CR-LF line endings in the scons.bat file.
    (Bug reported by Gary Ruben.)

  - Doc changes:  Eliminate description of deprecated "name" keyword
    argument from Builder definition (reported by Gary Ruben).

  - Support using env.Append() on BUILDERS (and other dictionaries).
    (Bug reported by Bj=F6rn Bylander.)

  - Setting the BUILDERS construction variable now properly clears
    the previous Builder attributes from the construction Environment.
    (Bug reported by Bj=F6rn Bylander.)

  - Fix adding a prefix to a file when the target isn't specified.
    (Bug reported by Esa Ilari Vuokko.)
